before nvim reset

--- a/config/swaync/style.css
+++ b/config/swaync/style.css
@@ -18,8 +18,7 @@
   --border-radius: 10px;
   --slider_trough_fg: rgba(0, 114, 255, 0.7), rgba(51, 204, 255, 0.7);
   --notification-shadow:
-    0 0 0 1px rgba(0, 0, 0, 0.3),
-    0 1px 3px 1px rgba(0, 0, 0, 0.7),
+    0 0 0 1px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.7),
     0 2px 6px 2px rgba(0, 0, 0, 0.3);
   --font-size-body: 15px;
   --font-size-summary: 15px;
@@ -29,7 +28,6 @@
   --hover-transition: var(--hover-tranistion);
   --group-collapse-transition: var(--group-collapse-tranistion);
 }
-
 
 @define-color cc-bg rgba(8, 8, 10, 0.7);
 @define-color noti-border-color rgba(51, 204, 255, 0.7);
@@ -58,7 +56,9 @@
 * {
   font-family: "FiraMono Nerd Font Light", "SF Pro Text", sans-serif;
 }
-notificationwindow, blankwindow, blankwindow {
+notificationwindow,
+blankwindow,
+blankwindow {
   background: transparent;
 }
 
@@ -118,7 +118,10 @@ notificationwindow, blankwindow, blankwindow {
   /* Critical Priority Notification */
 }
 
-.notification-row .notification-background .notification .notification-default-action {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action {
   /* The large action that also displays the notification summary and body */
   padding: 4px;
   margin: 0;
@@ -131,24 +134,39 @@ notificationwindow, blankwindow, blankwindow {
   border-radius: var(--border-radius);
 }
 
-.notification-row .notification-background .notification .notification-default-action:hover {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action:hover {
   -gtk-icon-filter: none;
   background: var(--noti-bg-hover);
 }
 
-.notification-row .notification-background .notification .notification-default-action:not(:only-child) {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action:not(:only-child) {
   /* When alternative actions are visible */
   border-bottom-left-radius: 0px;
   border-bottom-right-radius: 0px;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content {
   background: transparent;
   border-radius: var(--border-radius);
   padding: 0;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .image {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .image {
   /* Notification Primary Image */
   -gtk-icon-filter: none;
   -gtk-icon-size: var(--notification-icon-size);
@@ -157,7 +175,12 @@ notificationwindow, blankwindow, blankwindow {
   margin: 4px;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .app-icon {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .app-icon {
   /* Notification app icon (only visible when the primary image is set) */
   -gtk-icon-filter: none;
   -gtk-icon-size: var(--notification-app-icon-size);
@@ -165,12 +188,24 @@ notificationwindow, blankwindow, blankwindow {
   margin: 6px;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .text-box label {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .text-box
+  label {
   /* Fixes base GTK 4 CSS setting a filter of opacity 50% for some odd reason */
   filter: none;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .text-box .summary {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .text-box
+  .summary {
   /* Notification summary/title */
   font-size: var(--font-size-summary);
   font-weight: bold;
@@ -180,7 +215,13 @@ notificationwindow, blankwindow, blankwindow {
   margin-bottom: 3px;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .text-box .time {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .text-box
+  .time {
   /* Notification time-ago */
   font-size: var(--font-size-summary);
   font-weight: 600;
@@ -190,7 +231,13 @@ notificationwindow, blankwindow, blankwindow {
   margin-right: 20px;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .text-box .body {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .text-box
+  .body {
   /* Notification body */
   font-size: var(--font-size-body);
   font-weight: normal;
@@ -200,24 +247,45 @@ notificationwindow, blankwindow, blankwindow {
   margin-bottom: 3px;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content progressbar {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  progressbar {
   /* The optional notification progress bar */
   margin-top: 4px;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .body-image {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .body-image {
   /* The "extra" optional bottom notification image */
   margin-top: 4px;
-  background-color: white;
+  background-color: var(--text-color);
   -gtk-icon-filter: none;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .inline-reply {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .inline-reply {
   /* The inline reply section */
   margin-top: 4px;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .inline-reply .inline-reply-entry {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .inline-reply
+  .inline-reply-entry {
   background: var(--noti-bg-darker);
   color: var(--text-color);
   caret-color: var(--text-color);
@@ -225,7 +293,13 @@ notificationwindow, blankwindow, blankwindow {
   border-radius: var(--border-radius);
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .inline-reply .inline-reply-button {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .inline-reply
+  .inline-reply-button {
   margin-left: 4px;
   background: rgba(var(--noti-bg), var(--noti-bg-alpha));
   border: var(--border);
@@ -233,18 +307,33 @@ notificationwindow, blankwindow, blankwindow {
   color: var(--text-color);
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .inline-reply .inline-reply-button:disabled {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .inline-reply
+  .inline-reply-button:disabled {
   background: initial;
   color: var(--text-color-disabled);
   border: var(--border);
   border-color: transparent;
 }
 
-.notification-row .notification-background .notification .notification-default-action .notification-content .inline-reply .inline-reply-button:hover {
+.notification-row
+  .notification-background
+  .notification
+  .notification-default-action
+  .notification-content
+  .inline-reply
+  .inline-reply-button:hover {
   background: var(--noti-bg-hover);
 }
 
-.notification-row .notification-background .notification .notification-alt-actions {
+.notification-row
+  .notification-background
+  .notification
+  .notification-alt-actions {
   background: none;
   border-bottom-left-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
@@ -257,7 +346,11 @@ notificationwindow, blankwindow, blankwindow {
   padding: 0;
 }
 
-.notification-row .notification-background .notification .notification-action > button {
+.notification-row
+  .notification-background
+  .notification
+  .notification-action
+  > button {
   border-radius: var(--border-radius);
   color: var(--text-color);
 }
@@ -288,7 +381,8 @@ notificationwindow, blankwindow, blankwindow {
   margin: 6px 6px;
 }
 
-.notification-group .notification-group-buttons, .notification-group .notification-group-headers {
+.notification-group .notification-group-buttons,
+.notification-group .notification-group-headers {
   margin: 0 16px;
   color: var(--text-color);
 }
@@ -326,18 +420,24 @@ notificationwindow, blankwindow, blankwindow {
   /* Set lower stacked notifications opacity to 0 */
 }
 
-.notification-group.collapsed .notification-row:not(:last-child) .notification-action,
-.notification-group.collapsed .notification-row:not(:last-child) .notification-default-action {
+.notification-group.collapsed
+  .notification-row:not(:last-child)
+  .notification-action,
+.notification-group.collapsed
+  .notification-row:not(:last-child)
+  .notification-default-action {
   opacity: 0;
 }
 
-.notification-group.collapsed:hover .notification-row:not(:only-child) .notification {
+.notification-group.collapsed:hover
+  .notification-row:not(:only-child)
+  .notification {
   background-color: var(--noti-bg-hover);
 }
 
 .control-center {
   /* The Control Center which contains the old notifications + widgets */
-  background: rgba(var(--noti-bg),var(--noti-bg-alpha));
+  background: rgba(var(--noti-bg), var(--noti-bg-alpha));
   color: var(--text-color);
   border-radius: var(--border-radius);
   border: var(--border);
@@ -362,7 +462,10 @@ notificationwindow, blankwindow, blankwindow {
   transition: var(--group-collapse-tranistion), var(--hover-tranistion);
 }
 
-.control-center .control-center-list .notification .notification-default-action:hover,
+.control-center
+  .control-center-list
+  .notification
+  .notification-default-action:hover,
 .control-center .control-center-list .notification .notification-action:hover {
   background-color: var(--noti-bg-hover);
 }
@@ -370,7 +473,10 @@ notificationwindow, blankwindow, blankwindow {
 /* --- Remove grey slab/shadow around notifications inside Control Center --- */
 .control-center .control-center-list .notification-group,
 .control-center .control-center-list .notification-group .notification-row,
-.control-center .control-center-list .notification-group .notification-background {
+.control-center
+  .control-center-list
+  .notification-group
+  .notification-background {
   background-color: transparent;
   box-shadow: none;
   border: none;
@@ -482,7 +588,6 @@ notificationwindow, blankwindow, blankwindow {
   /* Change player side buttons insensitive */
 }
 
-
 /* Buttons widget */
 .widget-buttons-grid flowboxchild > button {
   border-radius: var(--border-radius);
@@ -561,7 +666,7 @@ notificationwindow, blankwindow, blankwindow {
   color: @theme_fg;
 }
 
-.widget-volume>box>button {
+.widget-volume > box > button {
   background: transparent;
   border: none;
   border-radius: var(--border-radius);
@@ -569,7 +674,7 @@ notificationwindow, blankwindow, blankwindow {
   transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.widget-volume>box>button:hover {
+.widget-volume > box > button:hover {
   color: @theme_fg_secondary;
   /*transform: scale(1.05); */
 }
@@ -590,7 +695,10 @@ scale slider {
   box-shadow: none;
   border-radius: 5px;
   /* background-color: @slider_thumb_bg; */
-  transition: background-color 0.5s ease, color 0.5s ease, box-shadow 0.5s ease;
+  transition:
+    background-color 0.5s ease,
+    color 0.5s ease,
+    box-shadow 0.5s ease;
   background-color: transparent;
 }
 scale slider:hover {
@@ -603,7 +711,7 @@ scale slider:hover {
 
 .widget-volume label:first-child,
 .widget-backlight label:first-child {
-  font-size: 1.3rem;     /* increase or tweak: try 2rem if you want even bigger */
+  font-size: 1.3rem; /* increase or tweak: try 2rem if you want even bigger */
   margin-right: 4px;
   color: var(--text-color); /* keeps same color as text */
 }
@@ -619,10 +727,14 @@ scale slider:hover {
 }
 .widget-buttons-grid > flowbox > flowboxchild > button {
   color: var(--text-color);
-  transition: background-color 0.5s ease, color 0.5s ease, box-shadow 1s ease, border 1s ease;
+  transition:
+    background-color 0.5s ease,
+    color 0.5s ease,
+    box-shadow 1s ease,
+    border 1s ease;
 }
 
-.widget-buttons-grid flowboxchild:nth-child(-n+5) > button {
+.widget-buttons-grid flowboxchild:nth-child(-n + 5) > button {
   border: 1px solid transparent;
   font-size: 1.4rem;
   margin: 0 2px;
@@ -632,7 +744,7 @@ scale slider:hover {
   min-width: 6px;
   min-height: 2px;
 }
-.widget-buttons-grid flowboxchild:nth-child(-n+5) > button:hover {
+.widget-buttons-grid flowboxchild:nth-child(-n + 5) > button:hover {
   border: 1px solid var(--noti-border-color);
   color: @module_hover_bg;
 }
@@ -674,4 +786,3 @@ scale slider:hover {
 /*   padding-right: 3px; */
 /* } */
 /* ── System Action Buttons ─────────────────────────── */
-
